--- a/compose.yaml
+++ b/compose.yaml
@@ -44,7 +44,7 @@ services:
         env_file:
             - './.env.local'
         volumes:
-            - 'sail-mysql:/var/lib/mysql'
+            - './sail/redis-data:/var/lib/mysql'
             - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
             - sail
@@ -61,7 +61,7 @@ services:
         ports:
             - '${FORWARD_REDIS_PORT:-6379}:6379'
         volumes:
-            - 'sail-redis:/data'
+            - './sail/redis-data:/data'
         networks:
             - sail
         healthcheck:
@@ -102,8 +102,3 @@ services:
 networks:
     sail:
         driver: bridge
-volumes:
-    sail-mysql:
-        driver: local
-    sail-redis:
-        driver: local
